--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=schedule
 
 spring.datasource.url=jdbc:mysql://localhost:3306/schedule
 spring.datasource.username=root
-spring.datasource.password=qwe1234
+spring.datasource.password=qwe123qwe
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
